fixed ploacement issue on mobile

--- a/static/styles/education/DNA_RNA_amino.css
+++ b/static/styles/education/DNA_RNA_amino.css
@@ -4,7 +4,6 @@
 }
 
 #DNA-match {
-    width: 200px;
     border-left: 10px solid var(--turquoise);
     border-right: 10px solid var(--green);
     margin-left: auto;
@@ -12,7 +11,6 @@
 }
 
 #RNA-match {
-    width: 200px;
     border-left: 10px solid var(--violet);
     border-right: 10px solid var(--green);
     margin-left: 50px;
@@ -23,21 +21,20 @@
     text-align: center;
 }
 
-#DNA-match, #RNA-match td{
-    height: 50px;
+#DNA-match, #RNA-match{
     width: 50px;
+}
+
+#DNA_letters, #RNA_letters {
     text-align: center;
+    width: 50px;
 }
 
 #DNA_letters {
-    text-align: center;
-    width: 50px;
     margin-right: auto;
 }
 
 #RNA_letters {
-    text-align: center;
-    width: 50px;
     margin-left: auto;
 }
 
@@ -57,16 +54,7 @@
     margin: 0;
 }
 
-#DNA_1, #DNA_2, #DNA_3, #DNA_4, #DNA_5, #DNA_6{
-    width: 50px;
-    height: 50px;
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid black;
-    transition: background-color 0.3s ease;
-    background-color: white;
-}
-
+#DNA_1, #DNA_2, #DNA_3, #DNA_4, #DNA_5, #DNA_6,
 #RNA_1, #RNA_2, #RNA_3, #RNA_4, #RNA_5, #RNA_6{
     width: 50px;
     height: 50px;
@@ -79,7 +67,7 @@
 
 #checkDNAButton, #checkRNAButton {
     height: 50px;
-    width: 30%;
+    width: 60%;
     margin-top: 10px;
     margin-bottom: 10px;
     background-color: var(--violet);
